feat: 新增角色、平台與彈簧的圖片顯示功能，並調整背景與文字顏色

--- a/開發步驟.md
+++ b/開發步驟.md
@@ -30,7 +30,7 @@
 - 範例說明：
 
 ```text
-請修改目前程式，根據 #file:build.md 的內容，參照 #file:prj05.py 的撰寫方式，依步驟1撰寫程式碼，並加入詳細易懂的註解，其餘步驟暫不執行。
+請修改目前程式 #file:galaxy_lancer_1.py，根據 #file:build.md 的內容，參照 #file:prj05.py 的撰寫方式，依步驟1撰寫程式碼，並加入詳細易懂的註解，其餘步驟暫不執行。
 ```
 
 ## 第五步：檢查與學習 🔍
@@ -48,7 +48,7 @@
 - 如果沒問題，就可以做下一步了：
 
 ```text
-修改目前程式，請根據 #file:build.md 的內容，參照 #file:prj05.py 的撰寫方式，執行步驟6，補上新程式詳細易懂的說明註解，確保原本的程式註解不要被更動，其餘步驟暫不執行。
+修改目前程式 #file:galaxy_lancer_6.py ，請根據 #file:build2.md 的內容，參照 #file:doodle_jump_12.py 的撰寫方式，執行步驟6，補上新程式詳細易懂的說明註解，並確保原本的程式註解不要被更動。
 ```
 
 ## 小提醒
